--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
+    "browser-sync": "^2.29.3",
     "cssnano": "^6.0.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
